[package]
name = "gps-share"
version = "0.2.0"
authors = [
    "Zeeshan Ali <zeenix@gmail.com>",
    "Dorota Czaplejewicz <dorota.czaplejewicz@puri.sm>",
    "Angus Ainslie <angus@akkea.ca>",
]
categories = ["hardware-support", "command-line-utilities", "command-line-interface", "os::unix-apis"]
keywords = ["serial", "hardware", "system", "RS232", "GPS", "avahi" ]
license = "GPL-2.0+"
readme = "README.md"
repository = "https://github.com/zeenix/gps-share"
description = "Utility to share your GPS device on local network"

[dependencies]
serial = "0.3"
zbus = "1.8"
zvariant = "2.6"
signal-hook = "0.1.13"
clap = "2.23.1"
libc = "^0.2.21"
libudev = "0.2.0"
