[package]
name = "gps-share"
version = "0.3.1"
authors = [
    "Zeeshan Ali <zeenix@gmail.com>",
    "Dorota Czaplejewicz <dorota.czaplejewicz@puri.sm>",
    "Angus Ainslie <angus@akkea.ca>",
]
categories = ["hardware-support", "command-line-utilities", "command-line-interface", "os::unix-apis"]
keywords = ["serial", "hardware", "system", "RS232", "GPS"]
license = "GPL-2.0+"
readme = "README.md"
repository = "https://github.com/zeenix/gps-share"
description = "Utility to share your GPS device on local network"
edition = "2024"
rust-version = "1.85"

[dependencies]
zbus = "5"
signal-hook = "0.4"
clap = "4"
libc = "0.2"
udev = "0.9"
# Device enumeration is done through `udev` directly, so serialport's own (unmaintained) libudev
# bindings are not needed.
serialport = { version = "4.9", default-features = false }
